--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
       <% include partials/header %> 
       <% include partials/nav %>
       <% include partials/page-title %>
-<!-- page-body.ejs -->
+<!-- page-body.ejss -->
     </div>
 
 <!-- modal.ejs -->
